bluec-tests/tests/invalid/expr_sizeof/sizeof_function2.c
// can't apply sizeof to a function
int main(void) {
    return sizeof (int (float, double));
}